2004-02-23  Andras Varga

	* cmodule.h: added changeParentTo() to cModule.
	* cenvir.h: added moduleReparented() to cEnvir.

2004-02-22  Andras Varga

	* cmodule.h: added gateSize() to cModule.

2004-02-20  Andras Varga

	* ctype.h, cchannel.h, cgate.h: introduced cChannelType which replaces
	cLinkType. cChannelType is a lot more flexible since its factory
	method create() allows creating channels of any class, not just 
	cSimpleChannel. Custom channel behaviour can thus be implemented
	by authoring an own channel class and registering it via an
	appropriate cChannelType and the Define_Channel() macro.

2004-02-12  Andras Varga

	* cgate.h, cchannel.h: gave a bool return value to deliver(), "false" 
	meaning that message object should be deleted.

2004-02-11  Andras Varga 

	* csimul.h, cscheduler.h: semantic change in getNextEvent()'s and
	selectNextModule()'s return value: NULL now means that the scheduler
	got interrupted by the user while it was waiting (typically with parsim
	or real-time sim).

2004-02-09  Andras Varga 

	* cexception.h: added storage of module class name (NED type name)

2004-02-09  Andras Varga 

	* ctypes.h: added methods to cModuleInterface so that it's possible
	to dynamically assemble it (needed by networkbuilder)

2004-02-07  Andras Varga 

	* ctypes.h: added createOneIfClassIsKnown(const char *classname) 
	function

2004-02-06  Andras Varga

	* cgate.h: added cGate::disconnect(); revised cGate::connectTo()

	* cchannel.h: added setDelay(double), setError(double), 
	setDatarate(double) to cSimpleChannel

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-09  Andras Varga

	* cenvir.h: added bubble() to cEnvir

	* cenvir.h: added overloaded "<<" operator for printing object pointers
	and references (cObject*, const cObject*, cObject&, const cObject&).
	It prints the class name and the full name, like "(cMessage)hello".

2004-01-06  Andras Varga

	* cenvir.h: added isGUI()
