@@ -22,6 +22,7 @@
 #include <iostream>
 #include "defs.h"
 #include "util.h"
+#include "cpolymorphic.h"
 #include "cexception.h"
 
 
@@ -57,53 +58,6 @@ typedef int (*CompareFunc)(cObject *a, cObject *b);
  */
 typedef bool (*ForeachFunc)(cObject *,bool);
 
-
-/**
- * This is the ultimate base class for cObject, and thus for nearly all
- * OMNeT++ classes. cPolymorphic is a <b>lightweight common base class</b>:
- * it only contains virtual member functions but no data members,
- * hence the memory footprint of a cPolymorphic instance consists of the
- * <i>vptr</i> (pointer to the virtual member functions table) only.
- *
- * This also means that deriving your classes from cPolymorphic
- * (as opposed to having no base class) comes for free.
- * (The vptr is present anyway if you have at least one virtual member
- * function.)
- *
- * The purpose of introducing cPolymorphic is to strengthen type safety.
- * <tt>cPolymorphic *</tt> pointers should replace <tt>void *</tt> in most places
- * where you need pointers to "any data structure".
- * Using cPolymorphic will allow the safe downcasts using <tt>dynamic_cast</tt>,
- * and also some reflection using className().
- *
- * @ingroup SimCore
- */
-// TBD use cPolymorphic
-// TBD move more virtual functions from cObject to cPolymorphic...?
-// TBD revise every cObject*, maybe change it to cPolymorphic
-class SIM_API cPolymorphic
-{
-  public:
-    /**
-     * Constructor. It has an empty body. (The class doesn't have data members
-     * and there's nothing special to do at construction time.)
-     */
-    cPolymorphic() {}
-
-    /**
-     * Destructor. It has an empty body (the class doesn't have data members.)
-     * It is declared here only to make the class polymorphic and make its
-     * destructor virtual.
-     */
-    virtual ~cPolymorphic() {}
-
-    /**
-     * Returns a pointer to the class name string. This method is implemented
-     * using typeid (C++ RTTI), and it does not need to be overridden
-     * in subclasses.
-     */
-    virtual const char *className() const;
-};
 
 /**
  * cObject is the base class for almost all classes in the OMNeT++ library.
